--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource-variable/lexend": "^5.0.5",
     "bootstrap": "^5.3.0",
     "sass": "^1.63.6",
+    "swiper": "^10.0.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
