--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource-variable/josefin-sans": "^5.0.6",
     "@fontsource-variable/lexend": "^5.0.5",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "sass": "^1.63.6",
     "swiper": "^10.0.4",
