--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@fontsource-variable/josefin-sans": "^5.0.6",
     "@fontsource-variable/lexend": "^5.0.5",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "sass": "^1.63.6",
+    "swiper": "^10.0.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
